--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo_for_website.png" alt="LYDIA Logo" class="logo"/>
+    <img src="logo_resized.png" alt="LYDIA Logo" class="logo" />
     <h1>LYDIA STAKING PORTAL</h1>
     <p>Wallet: <span id="wallet">-</span></p>
     <p>Staked: <span id="staked">0</span></p>
